# gcp-dynamic-ip-updater

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  gcp-dynamic-ip-updater.py
k8s/: gcp-dynamic-ip-updater.yaml
src/: main.rs
