[package]
name = "gcp-dynamic-ip-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
structopt = "0.3"
regex = "1.5"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
google-cloud = "0.2.1"